--- a/basics/app.json
+++ b/basics/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "Blank Template (TypeScript)",
     "slug": "basics",
     "privacy": "public",
     "sdkVersion": "36.0.0",
